# number-x-ray-cabinet

./: .gitignore  README.md  design-qa.md  index.html  package.json
.github/workflows/: native-tools.yml  native.yml  pages.yml  sparse-paper-benchmark.yml
docs/: deploy.md
fa/: index.html
native/: CMakeLists.txt  FASTER_MACHINE_HANDOFF.md  GMP_MULTIPLY_PAPER.md  GMP_MULTIPLY_PAPER_DRAFT.md  PERFORMANCE.md  README.md  SPARSE_GMP_OUTPERFORMANCE_PAPER.md
native/cmake/: NumberXRayConfig.cmake.in  api_doc_coverage.cmake  cli_focus_help_contract.cmake  generate_api_catalog.cmake  import_smoke.cmake  number-xray-sdk.json.in  number-xray-shared.pc.in  number-xray.pc.in
native/examples/import_consumer/: CMakeLists.txt  main.c
native/examples/python_ctypes/: number_xray_ctypes.py  smoke.py
native/include/: number_xray.h  xray_workbench.h
native/src/cli/: main.c
native/src/core/: xray_benchmark.c  xray_benchmark_compare.c  xray_cpu.c  xray_cyclotomic.c  xray_expression.c  xray_factor.c  xray_gnfs.c  xray_memory.c  xray_prime_table.inc  xray_report.c  xray_scratch_bigint.c  xray_version.c  xray_workspace.c
native/src/gui/: main.c  workbench.c  workbench.h
native/tests/: native_tests.c
native/tools/: bench_focus_matrix.py  bench_focus_repeat.py
src/: app.js  i18n.js  polynomial.js  scanner.js  styles.css  worker.js
tests/: math.test.js  scanner.test.js  smoke-browser.cjs
tools/: capture-native-window.ps1
